--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <div id="app">
-      <h1>TypeScript Sandbox</h1>
+      <h1>Coste de la cena</h1>
+      <div class="cena">
+        
+      </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
